--- a/design.ui
+++ b/design.ui
@@ -33,8 +33,14 @@
     <string notr="true">background-color: rgb(229, 233, 255);</string>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="2">
+    <item row="0" column="0" colspan="4">
      <widget class="QLabel" name="label">
+      <property name="minimumSize">
+       <size>
+        <width>481</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="font">
        <font>
         <pointsize>20</pointsize>
@@ -55,7 +61,7 @@ background-color: rgb(0, 0, 127);
       </property>
      </widget>
     </item>
-    <item row="1" column="0" rowspan="5">
+    <item row="1" column="0" rowspan="6">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string/>
@@ -69,7 +75,75 @@ background-color: rgb(0, 0, 127);
      </widget>
     </item>
     <item row="1" column="1">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>61</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="1" column="2">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Test №:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="testNumLabel">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+          <italic>true</italic>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(255, 255, 255);</string>
+        </property>
+        <property name="text">
+         <string>1</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="3">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>61</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="1" colspan="3">
      <widget class="QLabel" name="label_4">
+      <property name="minimumSize">
+       <size>
+        <width>231</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="styleSheet">
        <string notr="true"/>
       </property>
@@ -81,8 +155,14 @@ background-color: rgb(0, 0, 127);
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1" colspan="3">
      <widget class="QLabel" name="startInLabel">
+      <property name="minimumSize">
+       <size>
+        <width>231</width>
+        <height>31</height>
+       </size>
+      </property>
       <property name="font">
        <font>
         <pointsize>10</pointsize>
@@ -100,8 +180,14 @@ background-color: rgb(0, 0, 127);
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="4" column="1" colspan="3">
      <widget class="QLabel" name="label_5">
+      <property name="minimumSize">
+       <size>
+        <width>231</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="styleSheet">
        <string notr="true"/>
       </property>
@@ -113,8 +199,14 @@ background-color: rgb(0, 0, 127);
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1" colspan="3">
      <widget class="QLabel" name="timeLabel">
+      <property name="minimumSize">
+       <size>
+        <width>231</width>
+        <height>31</height>
+       </size>
+      </property>
       <property name="font">
        <font>
         <pointsize>10</pointsize>
@@ -132,21 +224,30 @@ background-color: rgb(0, 0, 127);
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
+    <item row="6" column="1" colspan="3">
      <widget class="QPushButton" name="startButton">
+      <property name="minimumSize">
+       <size>
+        <width>231</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>-1</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
        <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(255, 44, 93);</string>
+background-color: rgb(255, 44, 93);
+text-transform: uppercase;
+font-weight: bold;
+font-size: 25px;</string>
       </property>
       <property name="text">
-       <string>START</string>
+       <string>start</string>
       </property>
      </widget>
     </item>
